Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -371,6 +371,11 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
+                            <div class="icons-box">
+                                <div class="infont"><a href="#"><i class="fa fa-question-circle"></i></a></div>
+                            </div>
+                        </li>
 
                         <!--
                         <!--<li>
