--- a/netishr/recruitment_recruitmentplanning.html
+++ b/netishr/recruitment_recruitmentplanning.html
@@ -559,6 +559,9 @@
                                                             <th>
                                                                 Number of Applicant
                                                             </th>
+                                                            <th>
+                                                                Action
+                                                            </th>
                                                         </thead>
                                                         <tbody>
                                                             <tr>
@@ -569,6 +572,13 @@
                                                                 <td> External</td>
                                                                 <td> 2</td>
                                                                 <td> 20</td>
+                                                                <td>
+                                                                    <div class="btn-group">
+                                                                        <a href="">
+                                                                            <button class="btn-white btn btn-xs">Reopen</button>
+                                                                        </a>
+                                                                    </div>
+                                                                </td>
                                                             </tr>
                                                             <tr>
                                                                 <td> X01</td>
@@ -578,6 +588,13 @@
                                                                 <td> External</td>
                                                                 <td> 2</td>
                                                                 <td> 20</td>
+                                                                <td>
+                                                                    <div class="btn-group">
+                                                                        <a href="">
+                                                                            <button class="btn-white btn btn-xs">Reopen</button>
+                                                                        </a>
+                                                                    </div>
+                                                                </td>
                                                             </tr>
                                                             <tr>
                                                                 <td> X01</td>
@@ -587,6 +604,13 @@
                                                                 <td> External</td>
                                                                 <td> 2</td>
                                                                 <td> 20</td>
+                                                                <td>
+                                                                    <div class="btn-group">
+                                                                        <a href="">
+                                                                            <button class="btn-white btn btn-xs">Reopen</button>
+                                                                        </a>
+                                                                    </div>
+                                                                </td>
                                                             </tr>
                                                             <tr>
                                                                 <td> X01</td>
@@ -596,6 +620,13 @@
                                                                 <td> External</td>
                                                                 <td> 2</td>
                                                                 <td> 20</td>
+                                                                <td>
+                                                                    <div class="btn-group">
+                                                                        <a href="">
+                                                                            <button class="btn-white btn btn-xs">Reopen</button>
+                                                                        </a>
+                                                                    </div>
+                                                                </td>
                                                             </tr>
                                                             <tr>
                                                                 <td> X01</td>
@@ -605,6 +636,13 @@
                                                                 <td> External</td>
                                                                 <td> 2</td>
                                                                 <td> 20</td>
+                                                                <td>
+                                                                    <div class="btn-group">
+                                                                        <a href="">
+                                                                            <button class="btn-white btn btn-xs">Reopen</button>
+                                                                        </a>
+                                                                    </div>
+                                                                </td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
