--- a/netishr/workload_analysis.html
+++ b/netishr/workload_analysis.html
@@ -19,7 +19,7 @@
 
 <body>
     <div id="wrapper">
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -757,6 +757,7 @@
                                                                 <label>PIC</label>:</div>
                                                             <div class="col-sm-10">
                                                                 <select data-placeholder="Choose a job title..." class="chosen-select">
+                                                                    <option value="0" selected>None</option>
                                                                     <option value="1">DIR-BR Director of Business Development</option>
                                                                     <option value="2">DIR-FIN Director of Finance</option>
                                                                     <option value="3">DIR-HR Director of HR</option>
