--- a/netishr/performance_kpi_view.html
+++ b/netishr/performance_kpi_view.html
@@ -26,7 +26,7 @@
 
     <div id="wrapper">
 
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -425,8 +425,9 @@
                                 <label class="control-label">Job title: </label>
                                 <div class="input-group">
                                     <select data-placeholder="Choose a job title..." class="chosen-select input-sm form-control" tabindex="2">
+                                        <option value="0" selected>Any</option>
                                         <option value="1">DIR-BR Director of Business Development</option>
-                                        <option selected value="2">DIR-FIN Director of Finance</option>
+                                        <option value="2">DIR-FIN Director of Finance</option>
                                         <option value="3">DIR-HR Director of HR</option>
                                     </select>
                                     <span class="input-group-btn">
@@ -498,7 +499,6 @@
                                 <label class="control-label">Parent KPI: </label>
                                 <select data-placeholder="Choose a parent KPI..." class="chosen-select">
                                     <option value="0" selected>Any</option>
-                                    <option value="1">Select a KPI</option>
                                     <option value="2">Lorem ipsum dolor</option>
                                     <option value="3">Sit amet consectetur</option>
                                     <option value="4">Adipiscing elit</option>
