Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -373,7 +373,7 @@
                         </li>
                         <li>
                             <div class="icons-box">
-                                <div class="infont"><a href="#"><i class="fa fa-question-circle"></i></a></div>
+                                <div class="infont"><a href="help.html"><i class="fa fa-question-circle"></i></a></div>
                             </div>
                         </li>
 
