Updated NetisHR files

--- a/netishr/system_management.html
+++ b/netishr/system_management.html
@@ -32,7 +32,7 @@
 
 <body>
     <div id="wrapper">
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -415,6 +415,21 @@
                                     </div>
 
                                 </div>
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5>Help</h5>
+                                        <div class="ibox-tools">
+                                        </div>
+                                    </div>
+                                    <div class="ibox-content">
+                                        <div><a href="help_admin.html">NetisHR</a>
+                                            <div class="small">Create and manage help pages for NetisHR</div>
+                                        </div>
+                                        <p></p>
+                                    </div>
+
+                                </div>
+
                             </div>
                             <div class="col-lg-4">
                                 <!-- This system management menu items are for system administrator only -->
