Updated NetisHR files

--- a/netishr/career_individualcareerplan_new.html
+++ b/netishr/career_individualcareerplan_new.html
@@ -628,9 +628,8 @@
                                 </div>
                             </div>
                             <div class="row">
-
+                                <button type="button" class="btn btn-danger btn">Back</button>
                                 <button type="button" class="btn btn-primary btn">Submit</button>
-                                <button type="button" class="btn btn-danger btn">Cancel</button>
                             </div>
 
                         </div>
