--- a/netishr/career_individualcareerplan.html
+++ b/netishr/career_individualcareerplan.html
@@ -18,7 +18,8 @@
     <link href="css/style.css" rel="stylesheet">
 
     <link href="css/plugins/chosen/bootstrap-chosen.css" rel="stylesheet">
-
+    <!-- Table -->
+    <link href="css/plugins/footable/footable.core.css" rel="stylesheet">
 
 </head>
 
@@ -477,7 +478,11 @@
                 <div class="col-sm-8">
                     <div class="ibox">
                         <div class="ibox-content">
-
+                            <div class="col-sm-12">
+                                <div class="row">
+                                    <label class="control-label">Career Plan History</label>
+                                </div>
+                            </div>
 
                             <a href="career_individualcareerplan_new.html">
                                 <button type="button" class="btn btn-primary btn-xs">New career plan</button>
@@ -485,16 +490,14 @@
 
                             <div class="row">
 
+
                                 <div class="col-sm-12">
                                     <div class="full-height-scroll">
                                         <table class="footable table table-stripped toggle-arrow-tiny">
                                             <thead>
                                                 <tr>
                                                     <th data-toggle="true">Date</th>
-                                                    <th>Type</th>
-                                                    <th>Person grade</th>
-                                                    <th>Target job title</th>
-                                                    <th>Target job grade</th>
+                                                    <th data-hide="all">Target job titles</th>
                                                     <th>Submitted by</th>
                                                     <th>Status</th>
                                                     <th></th>
@@ -503,37 +506,142 @@
                                             <tbody>
                                                 <tr>
                                                     <td>January 1, 2013</td>
-                                                    <td>Rotation</td>
-                                                    <td>10</td>
-                                                    <td>Senior Marketing Staff</td>
-                                                    <td>10</td>
+                                                    <td>
+                                                        <table class="table table-stripped toggle-arrow-tiny">
+                                                            <thead>
+                                                                <tr>
+                                                                    <th>Type</th>
+                                                                    <th>Priority</th>
+                                                                    <th>Target job title</th>
+                                                                    <th>Target job grade</th>
+                                                                    <th>Status</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td>Rotation</td>
+                                                                    <td>1</td>
+                                                                    <td>Accounting Staff</td>
+                                                                    <td>9</td>
+                                                                    <td><span class="label">Submitted</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Rotation</td>
+                                                                    <td>2</td>
+                                                                    <td>Administration Staff</td>
+                                                                    <td>9</td>
+                                                                    <td><span class="label">Submitted</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Rotation</td>
+                                                                    <td>3</td>
+                                                                    <td>Marketing Staff</td>
+                                                                    <td>9</td>
+                                                                    <td><span class="label">Submitted</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Promotion</td>
+                                                                    <td>1</td>
+                                                                    <td>Marketing Manager</td>
+                                                                    <td>10</td>
+                                                                    <td><span class="label label-warning">Talent Pool</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Promotion</td>
+                                                                    <td>2</td>
+                                                                    <td>Administration Manager</td>
+                                                                    <td>10</td>
+                                                                    <td><span class="label">Submitted</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Promotion</td>
+                                                                    <td>3</td>
+                                                                    <td>Accounting Manager</td>
+                                                                    <td>10</td>
+                                                                    <td><span class="label">Submitted</span></td>
+                                                                </tr>
+
+                                                            </tbody>
+                                                        </table>
+
+                                                    </td>
                                                     <td>Tono Sardono</td>
-                                                    <td><span class="label label-warning">Talent pool</span></td>
+                                                    <td><span class="label label-primary">On-going</span></td>
                                                     <td>
                                                         <div class="btn-group">
                                                             <a href="career_individualcareerplan_new.html">
                                                                 <button class="btn-white btn btn-xs">Edit</button>
                                                             </a>
                                                         </div>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>January 1, 2013</td>
+                                                    <td>
+                                                        <table class="table table-stripped toggle-arrow-tiny">
+                                                            <thead>
+                                                                <tr>
+                                                                    <th>Type</th>
+                                                                    <th>Priority</th>
+                                                                    <th>Target job title</th>
+                                                                    <th>Target job grade</th>
+                                                                    <th>Status</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td>Rotation</td>
+                                                                    <td>1</td>
+                                                                    <td>Accounting Staff</td>
+                                                                    <td>9</td>
+                                                                    <td><span class="label label-primary">Transfered</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Rotation</td>
+                                                                    <td>2</td>
+                                                                    <td>Administration Staff</td>
+                                                                    <td>9</td>
+                                                                    <td><span class="label">Submitted</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Rotation</td>
+                                                                    <td>3</td>
+                                                                    <td>Marketing Staff</td>
+                                                                    <td>9</td>
+                                                                    <td><span class="label label-warning">Development</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Promotion</td>
+                                                                    <td>1</td>
+                                                                    <td>Marketing Manager</td>
+                                                                    <td>10</td>
+                                                                    <td><span class="label">Submitted</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Promotion</td>
+                                                                    <td>2</td>
+                                                                    <td>Administration Manager</td>
+                                                                    <td>10</td>
+                                                                    <td><span class="label">Submitted</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Promotion</td>
+                                                                    <td>3</td>
+                                                                    <td>Accounting Manager</td>
+                                                                    <td>10</td>
+                                                                    <td><span class="label">Submitted</span></td>
+                                                                </tr>
+
+                                                            </tbody>
+                                                        </table>
+
+                                                    </td>
+                                                    <td>Tono Sardono</td>
+                                                    <td><span class="label label-warning">Completed</span></td>
+                                                    <td>
                                                     </td>
                                                 </tr>
 
-                                                <tr>
-                                                    <td>April 1, 2014</td>
-                                                    <td>Promotion</td>
-                                                    <td>9</td>
-                                                    <td>Marketing Manager</td>
-                                                    <td>10</td>
-                                                    <td>Nini Sunini</td>
-                                                    <td><span class="label label-primary">Accepted</span></td>
-                                                    <td>
-                                                        <div class="btn-group">
-                                                            <a href="career_individualcareerplan_new.html">
-                                                                <button class="btn-white btn btn-xs">Edit</button>
-                                                            </a>
-                                                        </div>
-                                                    </td>
-                                                </tr>
                                             </tbody>
                                             <tfoot>
                                                 <tr>
@@ -545,6 +653,8 @@
                                         </table>
                                     </div>
                                 </div>
+
+
 
                             </div>
                         </div>
@@ -579,11 +689,16 @@
     <script src="js/inspinia.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
 
+    <!-- Table -->
+    <script src="js/plugins/footable/footable.all.min.js"></script>
+
     <!-- Page-Level Scripts -->
     <script>
         $('.chosen-select').chosen({
             width: "100%"
         });
+        $('.footable').footable();
+        $('.footable2').footable();
     </script>
 
 </body>
