--- a/netishr/career_talentpool.html
+++ b/netishr/career_talentpool.html
@@ -452,7 +452,7 @@
                                         </div>
                                     </div>
 
-                                    <button type="button" class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#submitselected">Submit selected persons</button>
+                                    <button type="button" class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#submitselected">Submit persons</button>
                                     <div class="modal inmodal" id="submitselected" tabindex="-1" role="dialog" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content animated">
@@ -470,7 +470,7 @@
                                         </div>
                                     </div>
 
-
+                                    <button type="button" class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#submitselected">Cancel persons</button>
 
                                 </div>
                             </div>
@@ -600,8 +600,6 @@
                                     <div class="row">
                                         <button type="button" class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#submit">Submit this person</button>
                                     </div>
-
-
                                     <div class="modal inmodal" id="submit" tabindex="-1" role="dialog" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content animated">
@@ -618,6 +616,8 @@
                                             </div>
                                         </div>
                                     </div>
+
+                                    <button type="button" class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#submitselected">Cancel this person</button>
 
                                     <div class="client-detail">
                                         <div class="full-height-scroll">
