--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -534,12 +534,9 @@
                                     </div>
                                     <div class="ibox-content">
                                         <div><a href="administrator_career_settings.html">Settings</a>
-                                            <div class="small">Various settings for Performance</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">Policy Setting</a>
-                                            <div class="small">Settings for policy</div>
-                                        </div>
+                                            <div class="small">Career policy settings</div>
+                                        </div><p>
+</p>
                                     </div>
                                 </div>
                             </div>
