Updated NetisHR files

--- a/netishr/career_searchtalent.html
+++ b/netishr/career_searchtalent.html
@@ -390,7 +390,7 @@
                                         <label class="control-label" for="status">Select target job title</label>
                                         <div class="input-group">
                                             <select data-placeholder="Choose a job title..." class="chosen-select input-sm form-control" tabindex="2">
-                                                <option selected value="0">Select a job title</option>
+                                                <option selected value="0">Any</option>
                                                 <option value="1">DIR-FIN Director of Finance</option>
                                                 <option value="2">DIR-HR Director of HR</option>
                                             </select>
