--- a/netishr/career_talentpool.html
+++ b/netishr/career_talentpool.html
@@ -597,9 +597,8 @@
                                         </div>
                                     </div>
 
-                                    <div class="row">
-                                        <button type="button" class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#submit">Submit this person</button>
-                                    </div>
+                                    Talent Development Program:
+                                    <button type="button" class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#submit">Submit</button>
                                     <div class="modal inmodal" id="submit" tabindex="-1" role="dialog" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content animated">
@@ -616,8 +615,9 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <button type="button" class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#submitselected">Cancel</button>
 
-                                    <button type="button" class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#submitselected">Cancel this person</button>
+
 
                                     <div class="client-detail">
                                         <div class="full-height-scroll">
