--- a/netishr/persons_staffs_profile.html
+++ b/netishr/persons_staffs_profile.html
@@ -406,6 +406,7 @@
                                             </ul>
 										<div class="tab-content ">
 											<div id="tab-1" class="tab-pane active">
+                                                <div class="col-sm-6">
 												<fieldset class="form-horizontal">
                                                     <div class="form-group">
                                                         <label class="col-sm-2 control-label">Name</label>
@@ -469,8 +470,59 @@
                                                         <div class="col-sm-10">
                                                             <p class="form-control-static"><button type="button" class="btn btn-primary btn-xs">Browse</button> <a>MyPhoto.Jpg</a></p>
                                                         </div>
-                                                    </div>                                                
+                                                    </div>           
 												</fieldset>
+                                                </div>
+                                                <div class="col-sm-3">
+                                                                                            <div class="full-height-scroll">
+                                            <table>
+                                                <thead>
+                                                    <tr>
+                                                        <th>Resume files <button type="button" class="btn btn-primary btn-xs">Upload</button></th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td><p>Cover letter<br><a href="#">coverletter.doc</a> <a href="#" data-toggle="modal" data-target="#deletefile"><i class="fa fa-times" ></i></a></p>
+                                    <div class="modal" id="deletefile">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content animated">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                    <h4 class="modal-title">Confirmation</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    Are you sure to delete the file?
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-white" data-dismiss="modal">Cancel</button>
+                                                    <button type="button" class="btn btn-primary">Yes</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div></a></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><p>Skills list<br><a href="#">skills.xls</a> <a href="#" data-toggle="modal" data-target="#deletefile"><i class="fa fa-times" ></i></a></p></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><p>Resume<br><a href="#">resume.pdf</a> <a href="#" data-toggle="modal" data-target="#deletefile"><i class="fa fa-times" ></i></a></p></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><p>Recommendation<br><a href="#">untitled.doc</a> <a href="#" data-toggle="modal" data-target="#deletefile"><i class="fa fa-times" ></i></a></p></td>
+                                                    </tr>
+                                                </tbody>
+                                                <tfoot>
+                                                    <tr>
+                                                        <td colspan="5">
+                                                            <ul class="pagination pull-right"></ul>
+                                                        </td>
+                                                    </tr>
+                                                </tfoot>
+                                            </table>
+                                        </div>
+
+                                                </div>
 											</div>
 											<div id="tab-2" class="tab-pane">
 												<fieldset class="form-horizontal">
