Updated NetisHR files

--- a/netishr/persons_staffs_profile.html
+++ b/netishr/persons_staffs_profile.html
@@ -688,12 +688,25 @@
                                                     					
                                                     </thead>
                                                     <tbody>
+                                                    <tr>
                                                     <td>
                                                         English
                                                         </td>
-                                                        <td>TOEFL 520</td>
+                                                        <td>TOEFL</td>
+                                                        <td>520</td>
                                                         <td>2007</td>
                                                         <td></td>
+                                                        </tr>
+                                                        <tr>
+                                                    <td>
+                                                        
+                                                        French
+                                                        </td>
+                                                        <td>CCF</td>
+                                                        <td>30</td>
+                                                        <td>2016</td>
+                                                        <td></td>
+                                                        </tr>
                                                     </tbody>
                                                 </table>
                                                     </div>
