Updated NetisHR files

--- a/netishr/performance_kpi_view.html
+++ b/netishr/performance_kpi_view.html
@@ -371,6 +371,18 @@
             <div class="row">
                 <div class="ibox-content m-b-sm border-bottom">
                     <div class="row">
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <!-- Get current performance management period from My Settings  -->
+                                <!-- By default, it is the period for current date -->
+                                <div>
+                                    <label class="control-label">Performance Management Period:</label>&nbsp;&nbsp; January 1, 2016 - December 31, 2016
+                                    <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newevidence">Change period</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-sm-2">
                             <div class="form-group">
                                 <label class="control-label" for="product_name">Code</label>
