Updated NetisHR files

--- a/netishr/help.html
+++ b/netishr/help.html
@@ -373,7 +373,10 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="active">
-                            <strong>Help</strong>
+                            Help
+                        </li>
+                        <li class="active">
+                            <strong>Organisasi</strong>
                         </li>
                     </ol>
                 </div>
